Bug 407686 - sddm_kcm shows an empty error message when I cancel the password dialog to allow the installation of a theme via GHNS window
Summary: sddm_kcm shows an empty error message when I cancel the password dialog to al...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 5.17.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
: 422992 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-18 12:28 UTC by Patrick Silva
Modified: 2020-08-31 06:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
screenshot (163.01 KB, image/jpeg)
2019-05-18 12:28 UTC, Patrick Silva
Details
"Installed" section of GHNS window (157.64 KB, image/jpeg)
2019-05-18 12:35 UTC, Patrick Silva
Details
canceling plasma settings sync with sddm (1.37 MB, video/webm)
2020-08-01 19:06 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-05-18 12:28:02 UTC
STEPS TO REPRODUCE
1. search for "login screen (sddm)" kcm using the apps launcher and open it
2. click "get new login screens..." button
3. install a theme (I tested with "sugar dark for sddm" theme)
4. when the password dialog to confirm the installation appears, cancel it


OBSERVED RESULT
an empty error message appears (see the attached screenshot)
and the theme is intalled anyway. The theme is present in "Instaaled" section of
GHNS window and Discover also lists it as installed.

EXPECTED RESULT
no error message and the sddm theme is not installed.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.0
Comment 1 Patrick Silva 2019-05-18 12:28:57 UTC
Created attachment 120163 [details]
screenshot
Comment 2 Patrick Silva 2019-05-18 12:35:22 UTC
Created attachment 120164 [details]
"Installed" section of GHNS window

As we can see in the second screenshot, "Installed" section of GHNS window shows the theme as installed but it is not available for selection in the sddm_kcm.
Comment 3 Nate Graham 2019-05-21 18:52:45 UTC
Well it used to crash so I guess we're making progress. :)
Comment 4 Patrick Silva 2020-06-15 05:13:30 UTC
*** Bug 422992 has been marked as a duplicate of this bug. ***
Comment 5 Alexander Lohnau 2020-07-21 19:32:56 UTC
This has been fixed some time ago when I was fixing the exact same issue for the dolphin installer :-).
Comment 6 Patrick Silva 2020-07-23 11:50:49 UTC
The sddm theme is no longer installed after the password dialog to be canceled, but the empty error message persists.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2
Comment 7 Patrick Silva 2020-08-01 19:06:35 UTC
Created attachment 130563 [details]
canceling plasma settings sync with sddm

Possibly related issue: also empty error message when I cancel the authentication to sync plasma settings with sddm. Watch the screen recording please.

Operating System: Arch Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 8 Bug Janitor Service 2020-08-27 21:01:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/sddm-kcm/-/merge_requests/2
Comment 9 Alexander Lohnau 2020-08-31 06:36:06 UTC
Git commit 8acacca14eba2c445b0e9dd8a9b4193cb48cfb7d by Alexander Lohnau.
Committed on 28/08/2020 at 16:17.
Pushed by alex into branch 'master'.

Avoid empty message dialogs, cleanup

- Choose better QString overloads
- Remove unused variables
- Add missing emit keywords
- Avoid multi-arg method call
- Avoid detaching in loop
- Do not show empty error messages, for exmple when the user clicks the
  cancel button
FIXED-IN: 5.20

M  +3    -2    sddmauthhelper.cpp
M  +3    -2    sddmthemeinstaller.cpp
M  +8    -4    src/advancedconfig.cpp
M  +4    -4    src/sddmkcm.cpp
M  +1    -5    src/themesdelegate.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/8acacca14eba2c445b0e9dd8a9b4193cb48cfb7d