Avoid empty message dialogs, cleanup

- Choose better QString overloads
- Remove unused variables
- Add missing emit keywords
- Avoid multi-arg method call
- Avoid detaching in loop
- Do not show empty error messages, for exmple when the user clicks the
  cancel button

BUG: 407686
FIXED-IN: 5.20